# opendxf

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
examples/: CMakeLists.txt  main.cpp  main_read.cpp  main_write.cpp
opendxf/: CMakeLists.txt
opendxf/include/opendxf/: coordinate.hpp  document.hpp  entities.hpp  error.hpp  header.hpp  ireadstream.hpp  layer.hpp  opendxf.hpp  read.hpp  tables.hpp  write.hpp
opendxf/src/: ireadstream.cpp  read.cpp  reader.cpp  reader.hpp  write.cpp
tests/: CMakeLists.txt  TestUtils.cpp  TestUtils.hpp  read_test.cpp  write_test.cpp
tests/Matchers/: CoordinateMatcher.cpp  CoordinateMatcher.hpp  DocumentMatcher.cpp  DocumentMatcher.hpp  EntitiesMatcher.cpp  EntitiesMatcher.hpp  HeaderMatcher.cpp  HeaderMatcher.hpp  LayerMatcher.cpp  LayerMatcher.hpp  TablesMatcher.cpp  TablesMatcher.hpp
tests/data/: empty_group_code.dxf  empty_group_code_padded.dxf  example.dxf  example.txt  minimal_example.dxf  missing_group_code.dxf  padded.dxf
